Add html structure and style
styling left navigation bar and top search bar

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@300;500;700&display=swap" rel="stylesheet">
+
     <script src="https://kit.fontawesome.com/2ef2a7fb14.js" crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href="./style/style.css">
@@ -15,7 +20,7 @@
         <header>
             <nav>
                 <ul>
-                    <li class="logo"></li>
+                    <li class="logo"><i class="fa-solid fa-crown"></i></li>
                     <li>Home</li>
                     <li>Profile</li>
                     <li>Messages</li>
@@ -40,7 +45,20 @@
                     <h3>Pippo Biagio</h3>
                 </div>
             </div>
-            <div class="btn-row"></div>
+            <div class="btn-row">
+                <div class="btn-row-left">
+                    <img>
+                    <div class="presentation">
+                        <h4>Hi there!</h4>
+                        <h3>Pippo Biagio (@pippo)</h3>
+                    </div>
+                </div>
+                <div class="btn-row-right">
+                    <button>New</button>
+                    <button>Upload</button>
+                    <button>Share</button>
+                </div>
+            </div>
         </div>
         <div class="content">
             <div class="project"></div>
